some alignment fixes

--- a/assets/sass/6-pages/_about-page.scss
+++ b/assets/sass/6-pages/_about-page.scss
@@ -1,4 +1,9 @@
 .about-page{
+  background: pink;
+  @include size(500px);
+  display: block;
+  margin: 0 auto;
+
   @include ie-fix() {
     background: red;
   }
